tests/ui/consts/const-eval/const-eval-overflow2b.stderr
error[E0080]: attempt to compute `i8::MAX + 1_i8`, which would overflow
  --> $DIR/const-eval-overflow2b.rs:12:6
   |
LL |      i8::MAX + 1,
   |      ^^^^^^^^^^^ evaluation of `VALS_I8` failed here

error[E0080]: attempt to compute `i16::MAX + 1_i16`, which would overflow
  --> $DIR/const-eval-overflow2b.rs:18:6
   |
LL |      i16::MAX + 1,
   |      ^^^^^^^^^^^^ evaluation of `VALS_I16` failed here

error[E0080]: attempt to compute `i32::MAX + 1_i32`, which would overflow
  --> $DIR/const-eval-overflow2b.rs:24:6
   |
LL |      i32::MAX + 1,
   |      ^^^^^^^^^^^^ evaluation of `VALS_I32` failed here

error[E0080]: attempt to compute `i64::MAX + 1_i64`, which would overflow
  --> $DIR/const-eval-overflow2b.rs:30:6
   |
LL |      i64::MAX + 1,
   |      ^^^^^^^^^^^^ evaluation of `VALS_I64` failed here

error[E0080]: attempt to compute `u8::MAX + 1_u8`, which would overflow
  --> $DIR/const-eval-overflow2b.rs:36:6
   |
LL |      u8::MAX + 1,
   |      ^^^^^^^^^^^ evaluation of `VALS_U8` failed here

error[E0080]: attempt to compute `u16::MAX + 1_u16`, which would overflow
  --> $DIR/const-eval-overflow2b.rs:41:6
   |
LL |      u16::MAX + 1,
   |      ^^^^^^^^^^^^ evaluation of `VALS_U16` failed here

error[E0080]: attempt to compute `u32::MAX + 1_u32`, which would overflow
  --> $DIR/const-eval-overflow2b.rs:46:6
   |
LL |      u32::MAX + 1,
   |      ^^^^^^^^^^^^ evaluation of `VALS_U32` failed here

error[E0080]: attempt to compute `u64::MAX + 1_u64`, which would overflow
  --> $DIR/const-eval-overflow2b.rs:52:6
   |
LL |      u64::MAX + 1,
   |      ^^^^^^^^^^^^ evaluation of `VALS_U64` failed here

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0080`.
